# cppPatterns_hw

./: .gitignore
Final_work/Spider_programme/: CMakeLists.txt  config_ini_spider.txt
Final_work/Spider_programme/header_files/: data_base.h  html_parser.h  http_client_async(ssl).h  http_client_async.h  http_client_async_ssl.h  ini_parser.h  spider.h  thread_pool.h
Final_work/Spider_programme/source_files/: data_base.cpp  html_parser.cpp  http_client_async(ssl).cpp  http_client_async.cpp  http_client_async_ssl.cpp  ini_parser.cpp  main.cpp  spider.cpp  thread_pool.cpp
Lesson_1/Task_81-1/: Task_81-1.sln  Task_81-1.vcxproj  Task_81-1.vcxproj.filters  sql_query_builder.h  task_81-1.cpp
Lesson_1/Task_81-2/: Task_81-2.sln  Task_81-2.vcxproj  Task_81-2.vcxproj.filters  sql_query_builder.h  task_81-2.cpp
Lesson_2/Task_82-1/: Task_82-1.sln  Task_82-1.vcxproj  Task_82-1.vcxproj.filters  task-82-1.cpp
Lesson_2/Task_82-2/: Task_82-2.sln  Task_82-2.vcxproj  Task_82-2.vcxproj.filters  task_82-2.cpp
Lesson_3/Task_83-1/: Task_83-1.sln  Task_83-1.vcxproj  Task_83-1.vcxproj.filters  task_83-1.cpp
Lesson_3/Task_83-2/: Task_83-2.sln  Task_83-2.vcxproj  Task_83-2.vcxproj.filters  fatal_error_log.txt  task_83-2.cpp
Lesson_3/Task_83-3/: Task_83-3.sln  Task_83-3.vcxproj  Task_83-3.vcxproj.filters  error.txt  task_83-3.cpp
